# dialogic-ai

./: .gitignore  Makefile  README.md  TODO_list.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
tests/: test_core.py
