[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dialogic-ai"
version = "0.0.1"
dependencies = [
]
requires-python = ">=3.8"
authors = [
    {name="Endy Bermudez", email="endyb.dev@gmail.com"},
]
description = "A Python package designed to manage complex, threaded conversations with branching capabilities, much like version control systems manage code branches."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "black>=24.8.0"
]

[project.urls]
Homepage = "https://github.com/endybits/dialogic-ai"